update: wlan pairing http

--- a/components/server_handler/CMakeLists.txt
+++ b/components/server_handler/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "server_handler.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES esp_http_server raven_nvs_handler json raven_wifi_config
+                    REQUIRES esp_http_server raven_nvs_handler json raven_wifi_config raven_peer_handler
                     )
