update: raven_mqtt_handler

--- a/components/raven_mqtt_handler/CMakeLists.txt
+++ b/components/raven_mqtt_handler/CMakeLists.txt
@@ -1,3 +1,5 @@
 idf_component_register(SRCS "raven_mqtt_handler.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES mqtt_client)
+                    REQUIRES mqtt
+                    EMBED_TXTFILES certs/hivemq_ca.pem
+                    )
