progress: mqtt communication protocol

--- a/components/raven_mqtt_handler/CMakeLists.txt
+++ b/components/raven_mqtt_handler/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(SRCS "raven_mqtt_handler.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES mqtt
+                    REQUIRES mqtt raven_peer_handler
                     EMBED_TXTFILES certs/hivemq_ca.pem
                     )
